SUBDIRS = colors screens fonts skin_default epg menu icons buttons extensions
installdir = /usr/share/enigma2/OpenPlusHD

install_DATA = agc.png bs_bl.png cursor.png folder.png infobar.png listSelection.png mute.png piconmediam.png prev.png slider_back.png timeline.png \
arrowdown.png bs_b.png CoolPointeremc.png div-h.png fondohist.png infobarRadio.png logochanel.png nada.png piconmedia.png progcl.png skin_channelsel.xml slider_bg1.png vkey_icon.png \
arrowup.png bs_br.png CoolPointer.png div-v.png left.png noprev.png piconmediau.png progress_bg.png slider_bg.png volume.png \
background.png bs_l.png CoolPointerRecemc.png ecm.png graba.png lineachaan.png marco.png p_bar1.png pig_bg.png progress_big.png skin_events.xml slider.png v-white.png \
backtransp.png bs_r.png CoolPointerRec.png grab.png lineaepg.png medialb1.png p_bar.png position_arrow2.png progress_r.png skin_infobars.xml skin_secinfobars.xml snr.png white-bar.png \
bar_ber.png bs_tl.png cover_bg1.png epg_more.png h-white.png lineahist.png picon_default.png position_arrow.png progress_small.png skin_plugins.xml squareclock.png white.png \
barra.png bs_t.png cover_bg2.png epg_next.png linea.png mp_buttons.png picon_defaultr.png position_pointer2.png repeat_off.png skin_template.xml timeline-now2.png \
bar_snr.png bs_tr.png cover_bg.png epg_now.png infobar2.jpg linearb.png mp_progress_bg.png picon_defaultvti.png position_pointer.png repeat_on.png skin.xml timeline-now3.png \
border_eventinfo.png cursor1.png infobar2.png linear.png mp_wb.png piconlogoc.png preview.png right.png slider1.png timeline-now.png 

