installdir = $(LIBDIR)/enigma2/python/Components/Converter

install_PYTHON = Bitrate2op.py openplusCamdInfo.py opExtendedServiceInfo.py openplusHDChannelCryptoInfo.py oplusRefString.py ExtremeInfop.py openplusHDServiceTime.py ServiceNameopen.py FrontendInfop.py OPumServiceInfo.py openplusHDSmartInfo.py VMovieInfop.py openplusHDVideoInfo.py openplusCaidInfo.py openSTBinfo.py

