installdir = /usr/share/enigma2/OpenPlusHD/buttons

install_DATA = blue1.png green1.png key_2.png key_7.png key_blue2.png key_exit1.png key_green.png key_info3.png key_menu1.png key_ok1.png key_radio.png key_r.png key_yellow1.png menu.png stop.png \
blue.png green.png key_3.png key_8.png key_blue_old.png key_exit2.png key_grey.png key_info4.png key_menu2.png key_ok2.png key_red1.png key_subtitle.png key_yellow_old.png pvr.png text.png \
bouquet.png grey.png key_4.png key_9.png key_blue.png key_exit.png key_help.png key_infoc.png key_menuc.png key_ok.png key_red_.png key_text.png key_yellow.png red1.png yellow1.png \
chmnus.png key_0.png key_5.png key_audio.png key_down.png key_green1.png key_info1.png key_info.png key_menu.png key_plus.png key_red.png key_tv.png left.png red.png yellow.png \
chplus.png key_1.png key_6.png key_av.png key_epg.png key_green_old.png key_info2.png key_left.png key_minus.png key_pvr.png key_right.png key_up.png right.png

