installdir = /usr/share/enigma2/OpenPlusHD/epg
install_DATA = BorderBottom.png BorderTop.png epgdes.png now_next_more_on.png OtherService.png SelectedBorderBottom.png SelectedBorderTop.png SelectedInformation.png TimeLineDate.png timeline-now_info.png timeline-now.png ZapEvent.png \
BorderLeft.png CurrentEvent.png information.png now_next_more.png RecordEvent.png SelectedBorderLeft.png SelectedCurrentEvent.png SelectedRecordEvent.png timeline-now1.png timeline-nowop.png timeline-now_s.png \
BorderRight.png CurrentService.png OtherEvent.png RecordingEvent.png SelectedBorderRight.png SelectedEvent.png SelectedZapEvent.png timeline-now2.png timeline-now-pig.png TimeLineTime.png timeline-now_x.png

