installdir = /usr/share/enigma2/OpenPlusHD/fonts
install_DATA = ae_AlMateen.license  arial.ttf CaviarDreams_Bold.ttf c+boldital.ttf DroidSans.ttf HandelGotDBol.ttf nmsbd2.ttf setrixHD.ttf \
ae_AlMateen.ttf Audiowide-Regular.ttf CaviarDreams.ttf digi.ttf GeosansLight.ttf HandelGotD.ttf meteocons.ttf OpenSans-Regular.ttf

