SUBDIRS = picons sound
installdir = /usr/share/enigma2/OpenPlusHD/icons

install_DATA = backward_large.png epgclock_post.png forward.png ico_folder.png ico_mp_play.png ico_txt_off.png input_rcold.png Mediaplayerbar_gray.png network_wireless-active.png rass_page2.png verticalline-plugins.png \
backward.png epgclock_pre.png ico_crypt_off1.png ico_format_off.png ico_mp_rewind.png ico_txt_on.png input_warning.png Mediaplayerbar_purple.png network_wireless-inactive.png scan-c.png volume11.png \
barrahor1.png epgclock_prepost.png ico_crypt_off.png ico_format_on.png ico_mp_stop.png ico_view.png lcd_DVI.png movielist.png network_wireless.png scan-s.png volumen1.png \
barrahorevent.png epgclock_selpost.png ico_crypt_on1.png ico_hbbtv_off1.png icon_event.png input_error.png lcd_HDMI.png mp_buttons.png ninactive.png scan-t.png volumen221.png \
barraicon.png epgclock_selpre.png ico_crypt_on.png ico_hbbtv_off.png ico_noreplay.png input_info.png lcd_Scart.png mp_wb_buttons.png pause_large.png simplechanel.png volumen22.png \
blank.png epgclock_selprepost.png ico_dolby_off.png ico_hbbtv_on1.png icon_stableupdate.png input_keyboard-configured.png lock_off.png mute.png pause.png slow_large.png weathermark1.png \
bomb.png epgclock_zap.png ico_dolby_on.png ico_hbbtv_on.png ico_player.png input_keyboard.png lock_on.png nactive_bak.png slow.png weathermark.png \
clock.png epgclock_zaprec.png ico_dvb-c.png ico_hd_off.png ico_rec_off.png input_mouse-configured.png logoaudio.png nactive.png play1.png \
dish.png error.png ico_dvb-s.png ico_hd_on.png ico_rec_onev.png input_mouse.png logomessageboxerror.png net_off.png play_large.png stop_large.png \
dish_scan.png expandable-plugins.png ico_dvb-t.png ico_line_off.png ico_rec_on.png input_question.png logomessagebox.png net_on.png play.png stop.png \
epgclock_add.png expanded-plugins.png ico_ecm_off.png ico_line_on.png ico_replay.png input_rcnew-configured.png logomessageboxq.png network_wired-active.png plugin.png sub_off1.png \
epgclock_autotimer.png flechas.png ico_ecm_on.png ico_mp_forward.png ico_service_group.png input_rcnew.png logomessageboxwar.png network_wired-inactive.png rass_logo.png sub_on1.png \
epgclock.png forward_large.png ico_event.png ico_mp_pause.png ico_stream.png input_rcold-configured.png marker.png network_wired.png rass_page1.png update.png 


