installdir = /usr/share/enigma2/OpenPlusHD/menu

install_DATA = abm.png browser.png console.png devicesinfmem1.png epg.png fritzf.png infotrans.png lan-seloff.png menu1.png menup.png mytube.png opmulti.png parentalpin.png segu.png transcode.png update.png \
adapter.png cd.png crash.png devicesinf.png epgr.png gmaps.png inputdev.png lan-sel.png menuinfchan.png motor.png network.png osdmenu1.png pincel.png shutdonw.png tuner.png video1.png \
antenna.png choice.png cross.png devices.png fan.png guarante.png iwea.png lcd.png menuinfnet1.png mount.png opluslogo.png osdmenue.png plex.png storage.png tvwe.png wireless-icon.png \
audiomenu.png clean.png Dashboard.png dvd.png file1.png hdmi.png langu1.png logonchannel2.png menuinf.png movist.png oplus.png owi.png plugin.png subt.png tvw.png youtube.png \
backup.png common.png design2.png emc.png file.png imdb.png lan-sel300.png log.png menupe.png music.png oplusp.png packages.png scart.png teclado.png UNICAM.png iptvsc.png osc.png

 


