SUBDIRS = buttons icons
installdir = /usr/share/enigma2/OpenPlusHD/skin_default
install_DATA = overscan.png testscreen.png vkey_backspace.png vkey_bg.png vkey_clr.png vkey_esc.png vkey_left.png vkey_ok.png vkey_right.png vkey_sel.png vkey_shift.png vkey_shift_sel.png vkey_space.png wizard11.png wizard1.png


