installdir = /usr/share/enigma2/OpenPlusHD/skin_default/buttons
install_DATA = blue.png button_green.png info.png key_2.png key_5.png key_8.png key_av.png key_epg.png key_grey.png key_left.png key_ok.png key_radio.png key_r.png key_tv.png left.png red.png yellow.png \
bouquet.png green.png key_0.png key_3.png key_6.png key_9.png key_blue.png key_exit.png key_help.png key_menu.png key_plus.png key_red.png key_subtitle.png key_up.png menu.png right.png \
button_green_off.png grey.png key_1.png key_4.png key_7.png key_audio.png key_down.png key_green.png key_info.png key_minus.png key_pvr.png key_right.png key_text.png key_yellow.png pvr.png text.png



