installdir = /usr/share/enigma2/OpenPlusHD/skin_default/icons
install_DATA = dish.png folder.png ico_folder.png ico_mp_backward.png ico_mp_forward.png ico_mp_pause.png ico_mp_play.png ico_mp_rewind.png ico_mp_slow.png ico_mp_stop.png lock_error.png lock_off.png lock_on.png marker.png redx.png selectioncross.png

